--- a/app/views/notifications/notify.html.erb
+++ b/app/views/notifications/notify.html.erb
@@ -1,5 +1,9 @@
-<h1>Notifications#notify</h1>
+Subject : <%=@sub%>
 
-<p>
-  <%= @greeting %>, find me in app/views/notifications/notify.html.erb
-</p>
+Message :
+
+<%=@msg%>
+
+Thanks and Regards
+Team
+
